--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.18.12",
+    "colors": "^1.1.2",
     "gulp": "^3.9.1",
     "gulp-watch": "^4.3.11",
     "gulp-webpack": "^1.5.0",
