--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browser-sync": "^2.18.12",
     "colors": "^1.1.2",
     "gulp": "^3.9.1",
+    "gulp-sequence": "^0.4.6",
     "gulp-watch": "^4.3.11",
     "gulp-webpack": "^1.5.0",
     "require-dir": "^0.3.2",
