--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "browser-sync": "^2.18.12",
     "colors": "^1.1.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0",
     "gulp-sequence": "^0.4.6",
     "gulp-watch": "^4.3.11",
     "gulp-webpack": "^1.5.0",
     "require-dir": "^0.3.2",
+    "sass": "^1.0.0-beta.1",
     "webpack": "^2.6.1"
   }
 }
