--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-sequence": "^0.4.6",
+    "gulp-uglify": "^3.0.0",
     "gulp-watch": "^4.3.11",
     "gulp-webpack": "^1.5.0",
     "require-dir": "^0.3.2",
-    "sass": "^1.0.0-beta.1",
     "webpack": "^2.6.1"
   }
 }
