--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "qlow",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.18.12",
-    "colors": "^1.1.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sequence": "^0.4.6",
-    "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^4.3.11",
-    "gulp-webpack": "^1.5.0",
-    "require-dir": "^0.3.2",
-    "webpack": "^2.6.1"
-  }
+    "name": "@qiusz/qlow",
+    "version": "0.0.1",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "ts-node src/enter/main.ts init"
+    },
+    "bin": {
+        "qlow": "bin/enter/main.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/node": "^8.5.1",
+        "@types/yargs": "^10.0.0",
+        "colors": "^1.1.2",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^4.0.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-sequence": "^0.4.6",
+        "gulp-uglify": "^3.0.0",
+        "require-dir": "^0.3.2"
+    },
+    "dependencies": {
+        "browser-sync": "^2.18.13",
+        "gulp-less": "^3.3.2",
+        "yargs": "^10.0.3"
+    }
 }
