--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "devDependencies": {
         "@types/colors": "^1.1.3",
         "@types/node": "^8.5.1",
-        "@types/yargs": "^10.0.0",
+        "@types/yargs": "^10.0.0"
+    },
+    "dependencies": {
+        "boxen": "^1.3.0",
+        "browser-sync": "^2.18.13",
+        "gulp-less": "^3.3.2",
+        "gulp-notify": "^3.0.0",
+        "yargs": "^10.0.3",
         "colors": "^1.1.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
@@ -28,12 +35,5 @@
         "gulp-sequence": "^0.4.6",
         "gulp-uglify": "^3.0.0",
         "require-dir": "^0.3.2"
-    },
-    "dependencies": {
-        "boxen": "^1.3.0",
-        "browser-sync": "^2.18.13",
-        "gulp-less": "^3.3.2",
-        "gulp-notify": "^3.0.0",
-        "yargs": "^10.0.3"
     }
 }
