--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
         "@types/yargs": "^10.0.0"
     },
     "dependencies": {
+        "art-template": "^4.12.2",
         "boxen": "^1.3.0",
         "browser-sync": "^2.18.13",
-        "gulp-less": "^3.3.2",
-        "gulp-notify": "^3.0.0",
-        "yargs": "^10.0.3",
         "colors": "^1.1.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
         "gulp-concat": "^2.6.1",
+        "gulp-html-tpl": "^0.5.2",
+        "gulp-less": "^3.3.2",
+        "gulp-notify": "^3.0.0",
         "gulp-sequence": "^0.4.6",
         "gulp-uglify": "^3.0.0",
-        "require-dir": "^0.3.2"
+        "require-dir": "^0.3.2",
+        "yargs": "^10.0.3"
     }
 }
