--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/qiushangzhe/qlow.git"
+        "url": "git+ssh://git@github.com:qiushangzhe/qlow.git"
     },
     "keywords": [],
     "author": "",
