--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "repository": "https://github.com/qiushangzhe/qlow.git",
   "author": "邱上哲 <470542573@qq.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "inquirer": "^7.1.0",
+    "ora": "^4.0.4"
+  }
 }
