--- a/template/package.json
+++ b/template/package.json
@@ -5,15 +5,27 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "zepto": "^1.2.0"
+    "pug-loader": "^2.4.0"
   },
   "devDependencies": {
-    "exports-loader": "^0.7.0",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "html-webpack-pug-plugin": "^2.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "pug": "^3.0.0",
     "script-loader": "^0.7.2",
+    "style-loader": "^1.2.1",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "thread-loader": "^2.1.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "zepto-webpack": "^1.2.1"
+    "webpack-dev-server": "^3.11.0"
   }
 }
